added ... to mark another line in message error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(${IDF_TARGET} STREQUAL "esp32p4")
     message(FATAL_ERROR "'${IDF_TARGET}' target chip at the moment cannot generate random values."
-                        "Please writes an issue to https://github.com/otaxhu/esp-uuid when"
+                        "Please writes an issue to https://github.com/otaxhu/esp-uuid when..."
                         "ESP-IDF add support to random number generation for '${IDF_TARGET}'"
                         "Aborting compilation of '${COMPONENT_NAME}'...")
 endif()
