not showing warnings as errors compile flag, because marks 'if (err = expression)' as a possible error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ if(${IDF_TARGET} STREQUAL "esp32p4")
                         "Aborting compilation of '${COMPONENT_NAME}'...")
 endif()
 
+message(STATUS "'${IDF_TARGET}' target")
+
 idf_component_register(SRCS "src/esp_uuid.c"
                        INCLUDE_DIRS "include")
+
+target_compile_options(${COMPONENT_LIB} INTERFACE -Wno-error)
